--- a/main_page/scss/header.scss
+++ b/main_page/scss/header.scss
@@ -41,12 +41,110 @@
   }
   &__cards {
     padding: 0 22px;
-    width: 600px;
+    width: 490px;
     height: 380px;
     background-color: rgba(227, 228, 248, 0.2);
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     border-radius: 20px;
   }
+  &__in {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
+  &__card-wrapper {
+    display: flex;
+    align-items: center;
+  }
+  &__slider-card {
+
+  }
+}
+
+.slider-card {
+  width: 220px;
+  height: 280px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  &__story-row {
+    padding: 20px 0 15px 0;
+    display: flex;
+    justify-content: center;
+  }
+  &__story {
+    border-radius: 4px;
+    margin: 0 1px;
+    flex: 0 0 30%;
+    background: #cccccc;
+    height: 2px;
+  }
+  &__active-story {
+    border-radius: 4px;
+    margin: 0 1px;
+    flex: 0 0 30%;
+    background: #fffdfd;
+    height: 2px;
+  }
+  &__text {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 11px;
+    color: #d2ccd7;
+    padding: 0 10px 15px 10px;
+  }
+  &__title {
+    flex-grow: 1;
+    padding: 0 10px;
+    font-size: 18px;
+    color: #fff;
+    font-weight: 500;
+    span {
+      color: #ccc;
+    }
+  }
+  &__button {
+    margin: 0 auto 20px auto;
+    width: 140px;
+    height: 35px;
+    border-radius: 20px;
+    border: solid 1px #fff;
+    a {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      font-family: "Montserrat", sans-serif;
+      font-size: 12px;
+      color: #fff;
+      &:hover {
+        color: #0b2635;
+      }
+    }
+    &:hover {
+      border: solid 1px #0b2635;
+    }
+  }
+  &__colour1 {
+    background-image: linear-gradient(146deg, #e18fd9 24%, rgba(242, 255, 217, 0.8) 100%);
+  }
+  &__colour2 {
+    background-image: linear-gradient(144deg, #9153ff 27%, rgba(242, 255, 217, 0.8) 100%);
+  }
+  &__colour3 {
+    background-image: linear-gradient(146deg, #7e95f5 24%, rgba(242, 255, 217, 0.8) 100%);
+  }
+}
+.swiper-button-next {
+  height: 65%;
+  transform: translateY(-41%);
+  opacity: 0;
+}
+.swiper-button-prev {
+  height: 65%;
+  transform: translateY(-41%);
+  opacity: 0;
 }
 
 .menu {
@@ -105,6 +203,12 @@
     }
     &__subtitle {
       font-size: 60px;
+    }
+    &__cards {
+      width: 600px;
+    }
+    &__in {
+      width: 80%;
     }
   }
   .menu {
