--- a/main_page/css/style.css
+++ b/main_page/css/style.css
@@ -161,6 +161,8 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 500;
 }
 .slider-card__title span {
+  display: inline-block;
+  padding: 5px 0 0 0;
   color: #ccc;
 }
 .slider-card__button {
