--- a/main_page/scss/header.scss
+++ b/main_page/scss/header.scss
@@ -100,6 +100,8 @@
     color: #fff;
     font-weight: 500;
     span {
+      display: inline-block;
+      padding: 5px 0 0 0;
       color: #ccc;
     }
   }
