fix (main-page/header.scss) увеличена область нажатия для переключения слайда

--- a/main_page/scss/header.scss
+++ b/main_page/scss/header.scss
@@ -139,11 +139,13 @@
   }
 }
 .swiper-button-next {
+  width: 22%;
   height: 65%;
   transform: translateY(-41%);
   opacity: 0;
 }
 .swiper-button-prev {
+  width: 22%;
   height: 65%;
   transform: translateY(-41%);
   opacity: 0;
