--- a/main_page/css/style.css
+++ b/main_page/css/style.css
@@ -199,12 +199,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .swiper-button-next {
+  width: 22%;
   height: 65%;
   transform: translateY(-41%);
   opacity: 0;
 }
 
 .swiper-button-prev {
+  width: 22%;
   height: 65%;
   transform: translateY(-41%);
   opacity: 0;
