--- a/for_applicants/css/style.css
+++ b/for_applicants/css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;700&family=Montserrat:wght@300;400;500;700&display=swap"); /*Обнуление*/
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;700&family=Montserrat:wght@300;400;500;700&display=swap");
+/*Обнуление*/
 * {
   padding: 0;
   margin: 0;
@@ -188,6 +189,7 @@ h1, h2, h3, h4, h5, h6 {
   .menu__link {
     font-size: 16.8px;
   }
+
   .information__text-title {
     font-size: 75px;
   }
@@ -212,6 +214,7 @@ h1, h2, h3, h4, h5, h6 {
   .menu__link {
     font-size: 16.8px;
   }
+
   .information__text-title {
     font-size: 60px;
   }
@@ -236,6 +239,7 @@ h1, h2, h3, h4, h5, h6 {
   .menu__link {
     font-size: 18.2px;
   }
+
   .information {
     flex-wrap: wrap;
     align-items: center;
@@ -366,6 +370,7 @@ h1, h2, h3, h4, h5, h6 {
     bottom: 50%;
     transform: rotate(45deg) translate(0, 50%);
   }
+
   .information {
     padding: 100px 0 0 0;
   }
@@ -588,13 +593,15 @@ h1, h2, h3, h4, h5, h6 {
 .graduates__row {
   display: flex;
   justify-content: space-between;
+  margin: 0 -20px;
 }
 .graduates__graduate-card {
-  flex: 0 0 25%;
+  padding: 0 20px;
+  flex: 0 0 30%;
 }
 @media (max-width: 900px) {
   .graduates__graduate-card {
-    flex: 0 0 30%;
+    flex: 0 0 32%;
   }
 }
 @media (max-width: 599px) {
@@ -648,6 +655,9 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0 10px 25px 10px;
 }
 @media (min-width: 1800px) {
+  .graduate-card__photo img {
+    height: 250px;
+  }
   .graduate-card__full-name {
     font-size: 20px;
   }
@@ -783,6 +793,7 @@ body._lock {
   .container-for-header {
     max-width: 1600px;
   }
+
   .container {
     max-width: 1100px;
   }
